--- a/ALT-Academy/curso/src/main/resources/static/usuarios.html
+++ b/ALT-Academy/curso/src/main/resources/static/usuarios.html
@@ -387,17 +387,8 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>12345</td>
-                                            <td>Raul Garcia</td>
-                                            <td>raulgm00@gmail.com</td>
-                                            <td>5578197226</td>
-                                            <td>
-                                                <a href="#" class="btn btn-danger btn-circle">
-                                                    <i class="fas fa-trash"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                       <!-- Se elimina fila -->
+
                                     </tbody>
                                 </table>
                             </div>
